feat/fix: rewok and review of portofolio add new tech stacks

--- a/src/assets/scss/_animations.scss
+++ b/src/assets/scss/_animations.scss
@@ -7,12 +7,13 @@
     }
 }
 
-
 // shake animation on hover
 .shake:hover {
     animation: shake 0.5s ease-in-out infinite;
 }
 
+
+/* shake animation keyframes */
 @keyframes shake {
 
     0%,
@@ -30,5 +31,29 @@
 
     75% {
         transform: translateX(-1px);
+    }
+}
+
+
+/* animation applied principaly to the borders of the elements */
+@keyframes borderLight {
+    0% {
+        box-shadow: rgba(255, 255, 255, 0) 0 0 0 0;
+    }
+
+    25% {
+        box-shadow: rgba(255, 255, 255, 0.8) 0 0 15px 5px;
+    }
+
+    50% {
+        box-shadow: aqua 0 0 30px 10px;
+    }
+
+    75% {
+        box-shadow: rgba(255, 255, 255, 0.8) 0 0 15px 5px;
+    }
+
+    100% {
+        box-shadow: rgba(255, 255, 255, 0) 0 0 0 0;
     }
 }
