--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -18,21 +18,22 @@ html {
     box-sizing: inherit;
 }
 
+// ---------------------------------
+
 body {
     height: 100%;
     width: 100%;
     position: relative;
-    color: #fff;
+    color: $color-gray-300;
     background-color: black; // repalce the canvas animate until will appear
     font-family: $font-family-base;
     font-weight: $font-weight-regular;
-    line-height: 1.8;
+    line-height: 1.7;
 }
 
-// ----------------------
-
-
-#animated-bg {
-    width: 100%;
-    height: 100%;
+.highlight {
+    color: $color-gray-100;
+    background-color: rgba(128, 128, 128, 0.2);
+    padding: 0.2rem 0.35rem;
+    border-radius: 0.3rem;
 }
