--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,14 +1,10 @@
 // rules globals on the project fotn seize whit media query
 html {
     box-sizing: border-box;
-    font-size: 16px; // base font-size adjusted whit rem em
-
-    @media screen and (max-width: $breakpoint-lg) {
-        font-size: 15px;
-    }
+    font-size: 17px; // base font-size adjusted whit rem em
 
     @media screen and (max-width:$breakpoint-sm) {
-        font-size: 14px;
+        font-size: 16px;
     }
 }
 
@@ -32,7 +28,7 @@ body {
 }
 
 .highlight {
-    color: $color-gray-100;
+    color: $color-white;
     background-color: rgba(128, 128, 128, 0.2);
     padding: 0.2rem 0.35rem;
     border-radius: 0.3rem;
