feat: updated structure of scss files, and abstacts vars custom are global now

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,3 +1,7 @@
+// exposed vars style scss
+@use '../abstracts/' as *;
+
+
 // rules globals on the project fotn seize whit media query
 html {
     box-sizing: border-box;
