--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -6,36 +6,37 @@
 .card {
     position: relative;
     overflow: hidden;
-    background: rgba(255, 255, 255, 0.07);
+    background: rgba(0, 0, 0, 0.25);
     color: $color-white;
     border: 1px solid rgba(255, 255, 255, 0.15);
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
     cursor: pointer;
-    transition: all 0.5s ease;
+    transition: all 0.4s linear;
+
+    &:hover {
+        transform: scale(1.01);
+    }
 
     &::before {
         content: '';
         position: absolute;
-        top: -50%;
+        top: -10%;
         left: -50%;
         width: 250%;
         height: 250%;
         background: linear-gradient(0deg,
                 transparent,
                 transparent 30%,
-                rgba(255, 255, 255, 0.4));
+                rgba(255, 255, 255, 0.1));
         transform: rotate(-30deg);
-        transition: all 0.5s ease;
+        transition: all 1s ease;
         opacity: 0;
     }
 
-    &:hover {
-        box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-        transform: scale(1.03);
-    }
 
     &:hover::before {
         opacity: 1;
         transform: rotate(-30deg) translateY(100%);
     }
+
 }
