--- a/src/styles/base/_animations.scss
+++ b/src/styles/base/_animations.scss
@@ -29,6 +29,33 @@
     }
 }
 
+
+//  ---------------------------------------------------------
+/* section reveal animation keyframes ----------------------- */
+//  ---------------------------------------------------------
+// default animation (not so high elements)
+.section-reveal {
+    animation: sectionReveal both;
+    animation-timeline: view(70% 20%);
+}
+
+@keyframes sectionReveal {
+    from {
+        filter: saturate(0) contrast(5) brightness(0.1) blur(3px);
+        opacity: 0;
+        scale: 0.9;
+        translate: 0 4rem;
+    }
+
+    to {
+        filter: none;
+        opacity: 1;
+        scale: 1;
+        translate: 0 0;
+    }
+}
+
+
 //  ---------------------------------------------------------
 /* spin animation keyframes --------------------------------- */
 //  ---------------------------------------------------------
@@ -41,6 +68,7 @@
         transform: rotate(360deg);
     }
 }
+
 
 //  ---------------------------------------------------------
 /* change color animation ----------------------------------- */
